kubernetes/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biglernet-website-ingress
  labels:
    app: biglernet-website
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - {}
  rules:
    - host: biglernet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biglernet-website-service
                port:
                  number: 80
    - host: www.biglernet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biglernet-website-service
                port:
                  number: 80
